# ugv-2024

./: README.md
2023/Codes-from-FYP/Brendan/: ESP32_MicroROS_driver_app_for_TFmini Plus_modules.cpp  code_for_ROS_Node_for_reading_sensor_data.cpp
2023/LoganVESC/: left_vesc_appconf.xml  right_vesc_appconf.xml
2023/believed_to_be_most_up-to-date/ugv-pc/: CMakeLists.txt  package.xml
2023/brendan/: .gitignore  README.md
2023/brendan-micro-ros/: README.md
2023/brendan-vesc-uros/ugv_esp32/: ugv_esp32.ino
2023/brendan-vesc/ugv_esp32/: ugv_esp32.ino
2023/brendan/ugv_esp32/: ugv_esp32.ino
2023/esp32-arduino-tank-steer-2023-sem1/ESP32 Arduino Tank Steer 2023-S1/: README.md
2023/esp32-arduino-tank-steer-2023-sem1/ESP32 Arduino Tank Steer 2023-S1/Tank_Steer_WORKED_3_3_23/: Tank_Steer_WORKED_3_3_23.ino
2023/files_believed_to_be_redundant/(REDUNDANT)brendan-micro-ros/ugv_esp32/: ugv_esp32.ino
2024/: README.md
2024/ESP32/: README.md
2024/VESC-Motor/: README.md  left_vesc_mcconf.xml  right_vesc_mcconf.xml
2024/ugv-pc/src/: subscriber_dev.cpp
